<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root"
        tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/scrollView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guidelineStart"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp"/>

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guidelineEnd"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
                    app:layout_constraintBottom_toTopOf="@+id/loginButton" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:text="@string/login_btn_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
                    app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:backgroundTint="@color/colorPrimary"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/createAccountButton"
                    android:text="@string/create_account_btn_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                    app:backgroundTint="@color/colorPrimaryDark"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>