<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <ImageView
            android:id="@+id/coffeeDrinkPicture"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            tools:srcCompat="@tools:sample/avatars"/>

    <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_clear_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/coffeeDrinkName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/closeIcon"
            app:layout_constraintTop_toTopOf="@+id/closeIcon"
            app:layout_constraintStart_toEndOf="@+id/closeIcon"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="TextView"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/coffeeDrinkFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp"
            app:tint="@color/icon_favourite_tint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>