...
    <string name="title_coffee_drinks">Coffee Drinks</string>
    <string name="title_cafes_near_me">Cafes Near Me</string>
    <string name="title_profile">Profile</string>

    <string name="settings_action">Settings</string>
    <string name="search_action">Search</string>
    <string name="logout_action">Log Out</string>

    <!-- Errors -->
    <string name="error_name_is_blank">Name is blank</string>
    <string name="error_email_is_blank">Email is blank</string>
    <string name="error_email_is_not_email">Text is not an email address</string>
    <string name="error_password_is_blank">Password is blank</string>
...
    <string name="error_no_cafes_near_you">No cafes near you</string>
    <string name="error_unexpected_error_during_loading_cafes_near_you">Unexpected error during loading cafes near you</string>

    <string name="try_again_action">Try again</string>

    <!-- Messages -->
    <string name="user_was_created">User was created, please log in</string>

    <!-- Permissions -->
    <string name="permission_explanation">We need location permission because we want to show the nearest cafes</string>
    <string name="permission_grant_text">Grant</string>

    <!-- Preference Screen -->
...
